body overflow fix

--- a/src/app/assets/styles/common.css
+++ b/src/app/assets/styles/common.css
@@ -78,6 +78,10 @@
     var(--line-height-large) var(--font-family-golos);
 }
 
+body {
+  overflow-x: hidden;
+}
+
 body, p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
